[gd_scene load_steps=3 format=3 uid="uid://cxwcrcqfi8h1u"]

[ext_resource type="Script" path="res://scripts/high_score_menu.gd" id="1_10twi"]
[ext_resource type="Theme" uid="uid://be5lfg327vkoi" path="res://themes/bold.tres" id="1_dt5by"]

[node name="HighScoreMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10twi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 224.0
offset_bottom = 288.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 224.0
offset_bottom = 288.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SpacerLabel3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dt5by")
text = "High Scores:"
horizontal_alignment = 1

[node name="SpacerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UserList" type="ItemList" parent="MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_dt5by")
theme_override_font_sizes/font_size = 8
allow_search = false
auto_height = true

[node name="ScoreList" type="ItemList" parent="MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_dt5by")
theme_override_font_sizes/font_size = 8
allow_search = false
auto_height = true

[node name="SpacerLabel2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_dt5by")
text = "Main Menu"

[node name="SpacerLabel4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
